fix table background in dark mode

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -207,6 +207,12 @@ table tr {
     background-color: white;
 }
 
+@media (prefers-color-scheme: dark) {
+    table tr {
+        background: #222;
+    }
+}
+
 table tr th {
     font-weight: bold;
     border: 1px solid #cccccc;
